--- a/src/App.css
+++ b/src/App.css
@@ -74,25 +74,169 @@ input {
   border-radius: 51px;
 }
 
-.form_element {
-  /* z-index: 8000 !important; */
-  font-family: Lato;
+.gba_sidebar_container {
+  width: 50%;
+  height: 10%;
+  font-family: 'Plus Jakarta Sans';
   font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 30px;
-  padding-left: 2em;
+  font-weight: 600;
+  font-size: 14.6441px;
+  border: 1.22034px solid #dbdbdb;
+  border-radius: 9.76271px;
 
-  color: #000000;
-
-  background: #faf9f9;
-  border-radius: 20px;
-  appearance: none !important;
-  border: none;
-  height: 70px;
-  margin: 1em 0;
+  align-items: center;
+  text-align: center;
 }
 
+.gba_sidebar {
+  padding: 10%;
+  align-items: center;
+  text-align: center;
+
+  background: #ffffff;
+  color: #2f2f2f;
+  width: 40%;
+  height: 10%;
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+  margin-left: 15px;
+}
+
+.active_gba_sidebar {
+  padding: 10%;
+  align-items: center;
+  text-align: center;
+  color: #ffffff;
+  background: #2f2f2f;
+
+  width: 100%;
+  height: 100%;
+
+  margin-left: 15px;
+  /* Inside auto layout */
+
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+}
+.rate_calculation_header {
+  /* Heading/Heading 3 */
+
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 30px;
+  text-align: center;
+  letter-spacing: 0.01em;
+
+  /* Greyscale Color/Dark */
+
+  color: #1a202c;
+}
+.rate_calculation_value {
+  font-family: 'Plus Jakarta Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16.364px;
+  line-height: 21px;
+  text-align: right;
+  margin-left: 20%;
+
+  color: #000000;
+}
+
+.rate_bitcoin_total {
+  font-family: 'Plus Jakarta Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 27.6596px;
+  line-height: 36px;
+  /* identical to box height, or 130% */
+
+  display: flex;
+  align-items: center;
+
+  /* Greyscale Color/Dark */
+
+  color: #1a202c;
+
+  /* Inside auto layout */
+
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+
+.profile_container {
+  /* position: absolute; */
+  width: 936px;
+  height: 624px;
+  left: 440px;
+  top: 264px;
+
+  background: #fff9f0;
+  border-radius: 30px;
+}
+
+.profile_container_white {
+  /* position: absolute; */
+  width: 375.14px;
+  height: 330.32px;
+  /* left: 487px; */
+  top: 512px;
+  background: #ffffff;
+  border-radius: 10.8657px;
+  margin-left: 5%;
+}
+
+.profile_container_yellow {
+  margin-top: 30%;
+  margin-right: 40%;
+  width: 55%;
+  height: 60%;
+  align-content: center;
+  align-self: center;
+  align-items: center;
+}
+
+.rate_bitcoin_word {
+  font-family: 'Plus Jakarta Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 28px;
+  /* identical to box height, or 198% */
+
+  display: flex;
+  align-items: center;
+
+  /* Greyscale Color/Grey 1 */
+
+  color: #8690a3;
+
+  /* Inside auto layout */
+
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.rate_calculation_container {
+  background: #fff9f0;
+  border: 1px dashed #e4ad50;
+  border-radius: 17.48px;
+  margin-top: 30%;
+  width: 55%;
+  height: 60%;
+  align-content: center;
+  align-self: center;
+  align-items: center;
+  padding: 5%;
+}
 .primary_btn {
   max-width: 702.82px;
   height: 64px;
@@ -149,7 +293,6 @@ input {
   height: 47px;
   background: #000000;
   border-radius: 12px;
-
   /* Inside auto layout */
 
   flex: none;
@@ -158,8 +301,10 @@ input {
   flex-grow: 0;
 }
 
-.home_sidebar_icon {
+.home_sidebar img path {
   color: #e4ad50 !important;
+
+  fill: #e4ad50 !important;
 }
 
 .mini_side_box {
@@ -285,9 +430,19 @@ input {
 }
 
 .dashboard_trade_container {
-  border: 1px solid #e4ecf3;
+  border: 1px solidf #e4ecf3;
   border-radius: 17.48px;
   width: 40%;
+  height: 80%;
+  margin-top: 8%;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+.rate_giftcard_container {
+  border: 1px solid #e4ecf3;
+  border-radius: 17.48px;
+  width: 100%;
   height: 80%;
   margin-top: 8%;
   margin-bottom: 0;
@@ -443,11 +598,10 @@ input {
 .viewall_transactions {
   /* position: absolute; */
 
-
   display: flex;
   justify-content: flex-end;
-  
-   width: 90%;
+
+  width: 90%;
   /* Greyscale / 50 */
   color: #000000;
   background: #fafafa;
