--- a/src/App.css
+++ b/src/App.css
@@ -75,8 +75,8 @@ input {
 }
 
 .gba_sidebar_container {
-  width: 50%;
-  height: 10%;
+  max-width: 20%;
+  height: 4%;
   font-family: 'Plus Jakarta Sans';
   font-style: normal;
   font-weight: 600;
