--- a/src/App.css
+++ b/src/App.css
@@ -205,7 +205,6 @@ input {
   margin-left: 5%;
 }
 
-
 .profile_container_yellow {
   /* margin-top: 30%;
   margin-right: 40%; */
@@ -217,20 +216,19 @@ input {
 }
 
 .edit_profile_button {
-
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   padding: 16px 123px;
   gap: 10px;
-  
+
   width: 233px;
   height: 54px;
   /* left: 791px;
   top: 411px; */
   color: #000000;
-  background: #E4AD50;
+  background: #e4ad50;
   border-radius: 8px;
 }
 
@@ -336,6 +334,13 @@ input {
   color: #e4ad50 !important;
 
   fill: #e4ad50 !important;
+}
+
+.dropdownlink_txt_links {
+  align-items: center;
+  letter-spacing: 0.2px;
+
+  color: #1a202c;
 }
 
 .mini_side_box {
